--- a/.github/workflows/CLI-ActixPostgres-CI.yml
+++ b/.github/workflows/CLI-ActixPostgres-CI.yml
@@ -43,12 +43,7 @@ jobs:
         with:
           command: run 
           args: --bin create-rust-app -- create -c -d postgres -b actix-web test-project
-      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> backend/schema.rs
-      - run: cd test-project && cargo dsync
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: build
-          args: --manifest-path=test-project/Cargo.toml
+      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> backend/schema.rs && cargo dsync && cargo build
 
   Actix-Postgres-All:
     needs: [Actix-Postgres-None]
@@ -71,12 +66,7 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=auth,container,graphql,storage,utoipa test-project
-      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cd test-project && cargo dsync
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: build
-          args: --manifest-path=test-project/Cargo.toml
+      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo build
 
   Actix-Postgres-Container:
     needs: [Actix-Postgres-None]
@@ -99,12 +89,7 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=container test-project
-      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cd test-project && cargo dsync
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: build
-          args: --manifest-path=test-project/Cargo.toml
+      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo build
 
   Actix-Postgres-Auth:
     needs: [Actix-Postgres-None]
@@ -127,12 +112,7 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=auth test-project
-      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cd test-project && cargo dsync
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: build
-          args: --manifest-path=test-project/Cargo.toml
+      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo build
 
   Actix-Postgres-Storage:
     needs: [Actix-Postgres-None]
@@ -155,12 +135,7 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=storage test-project
-      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cd test-project && cargo dsync
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: build
-          args: --manifest-path=test-project/Cargo.toml
+      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo build
 
   Actix-Postgres-GraphQL:
     needs: [Actix-Postgres-None]
@@ -183,12 +158,7 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=graphql,auth test-project
-      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cd test-project && cargo dsync
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: build
-          args: --manifest-path=test-project/Cargo.toml
+      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo build
 
   Actix-Postgres-Utoipa:
     needs: [Actix-Postgres-None]
@@ -211,8 +181,4 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=auth,utoipa test-project
-      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cd test-project && cargo dsync
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: build
+      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo build
