--- a/.github/workflows/CLI-ActixPostgres-CI.yml
+++ b/.github/workflows/CLI-ActixPostgres-CI.yml
@@ -43,7 +43,12 @@ jobs:
         with:
           command: run 
           args: --bin create-rust-app -- create -c -d postgres -b actix-web test-project
-      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> backend/schema.rs && cargo dsync && cargo build
+      - run: cd test-project 
+      - run: printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cargo dsync 
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: check
 
   Actix-Postgres-All:
     needs: [Actix-Postgres-None]
@@ -66,7 +71,12 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=auth,container,graphql,storage,utoipa test-project
-      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo build
+      - run: cd test-project 
+      - run: printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cargo dsync 
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: check
 
   Actix-Postgres-Container:
     needs: [Actix-Postgres-None]
@@ -89,7 +99,12 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=container test-project
-      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo build
+      - run: cd test-project 
+      - run: printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cargo dsync 
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: check
 
   Actix-Postgres-Auth:
     needs: [Actix-Postgres-None]
@@ -112,7 +127,12 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=auth test-project
-      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo build
+      - run: cd test-project 
+      - run: printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cargo dsync 
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: check
 
   Actix-Postgres-Storage:
     needs: [Actix-Postgres-None]
@@ -135,7 +155,12 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=storage test-project
-      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo build
+      - run: cd test-project 
+      - run: printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cargo dsync 
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: check
 
   Actix-Postgres-GraphQL:
     needs: [Actix-Postgres-None]
@@ -158,7 +183,12 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=graphql,auth test-project
-      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo build
+      - run: cd test-project 
+      - run: printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cargo dsync 
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: check
 
   Actix-Postgres-Utoipa:
     needs: [Actix-Postgres-None]
@@ -181,4 +211,9 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=auth,utoipa test-project
-      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo build
+      - run: cd test-project 
+      - run: printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cargo dsync 
+      - uses: actions-rs/cargo@v1.0.3
+        with:
+          command: check
