--- a/.github/workflows/CLI-ActixSqlite-CI.yml
+++ b/.github/workflows/CLI-ActixSqlite-CI.yml
@@ -43,12 +43,7 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b actix-web test-project
-      - run: cd test-project 
-      - run: printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync 
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: check
+      - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
 
   Actix-Sqlite-All:
     needs: [Actix-Sqlite-None]
@@ -71,12 +66,7 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=auth,container,graphql,storage,utoipa test-project
-      - run: cd test-project 
-      - run: printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync 
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: check
+      - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
   
   Actix-Sqlite-Container:
     needs: [Actix-Sqlite-None]
@@ -99,12 +89,7 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=container test-project
-      - run: cd test-project 
-      - run: printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync 
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: check
+      - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
 
   Actix-Sqlite-Auth:
     needs: [Actix-Sqlite-None]
@@ -127,12 +112,7 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=auth test-project
-      - run: cd test-project 
-      - run: printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync 
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: check
+      - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
 
   Actix-Sqlite-Storage:
     needs: [Actix-Sqlite-None]
@@ -155,12 +135,7 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=storage test-project
-      - run: cd test-project 
-      - run: printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync 
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: check
+      - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
 
   Actix-Sqlite-GraphQL:
     needs: [Actix-Sqlite-None]
@@ -183,12 +158,7 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=graphql,auth test-project
-      - run: cd test-project 
-      - run: printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync 
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: check
+      - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
 
   Actix-Sqlite-Utoipa:
     needs: [Actix-Sqlite-None]
