--- a/.github/workflows/CLI-PoemSqlite-CI.yml
+++ b/.github/workflows/CLI-PoemSqlite-CI.yml
@@ -43,12 +43,7 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b poem test-project
-      - run: cd test-project 
-      - run: printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync 
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: check
+      - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
 
  
   Poem-Sqlite-All:
@@ -72,12 +67,7 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=auth,container,graphql,storage test-project
-      - run: cd test-project 
-      - run: printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync 
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: check
+      - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
 
   Poem-Sqlite-Container:
     needs: [Poem-Sqlite-None]
@@ -100,12 +90,7 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=container test-project
-      - run: cd test-project 
-      - run: printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync 
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: check
+      - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
 
   Poem-Sqlite-Auth:
     needs: [Poem-Sqlite-None]
@@ -128,12 +113,7 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=auth test-project
-      - run: cd test-project 
-      - run: printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync 
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: check
+      - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
 
   Poem-Sqlite-Storage:
     needs: [Poem-Sqlite-None]
@@ -156,12 +136,7 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=storage test-project
-      - run: cd test-project 
-      - run: printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync 
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: check
+      - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
 
   Poem-Sqlite-GraphQL:
     needs: [Poem-Sqlite-None]
@@ -184,9 +159,4 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=graphql,auth test-project
-      - run: cd test-project 
-      - run: printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
-      - run: cargo dsync 
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: check
+      - run: cd test-project && printf "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs && cargo dsync && cargo check
