--- a/.github/workflows/CLI-PoemPostgres-CI.yml
+++ b/.github/workflows/CLI-PoemPostgres-CI.yml
@@ -34,7 +34,7 @@ jobs:
       - uses: actions/cache@v3.2.5
         with:
           path: |
-            */.cargo/.build
+            .cargo/.build
           key: ${{ runner.os }}-cargo-cli-PP-${{ hashFiles('**/Cargo.lock') }}
       - run: git config --global user.name test
       - run: git config --global user.email example@email.com
@@ -62,7 +62,7 @@ jobs:
       - uses: actions/cache@v3.2.5
         with:
           path: |
-            */.cargo/.build
+            .cargo/.build
           key: ${{ runner.os }}-cargo-cli-PP-${{ hashFiles('**/Cargo.lock') }}
       - run: git config --global user.name test
       - run: git config --global user.email example@email.com
